--- a/src/ios/GoogleService-Info.plist
+++ b/src/ios/GoogleService-Info.plist
@@ -2,5 +2,39 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>AD_UNIT_ID_FOR_BANNER_TEST</key>
+	<string>ca-app-pub-3940256099942544/2934735716</string>
+	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
+	<string>ca-app-pub-3940256099942544/4411468910</string>
+	<key>CLIENT_ID</key>
+	<string>565258637605-55qfhderi2av7hd68t84vai0ks2lsavj.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.565258637605-55qfhderi2av7hd68t84vai0ks2lsavj</string>
+	<key>API_KEY</key>
+	<string>AIzaSyDq8yDnaBDZFNe_x0irCjHedgaGt4ICGZE</string>
+	<key>GCM_SENDER_ID</key>
+	<string>565258637605</string>
+	<key>PLIST_VERSION</key>
+	<string>1</string>
+	<key>BUNDLE_ID</key>
+	<string>mx.sourcecode.impulso.monte</string>
+	<key>PROJECT_ID</key>
+	<string>monte-de-piedad</string>
+	<key>STORAGE_BUCKET</key>
+	<string>monte-de-piedad.appspot.com</string>
+	<key>IS_ADS_ENABLED</key>
+	<true/>
+	<key>IS_ANALYTICS_ENABLED</key>
+	<false/>
+	<key>IS_APPINVITE_ENABLED</key>
+	<false/>
+	<key>IS_GCM_ENABLED</key>
+	<true/>
+	<key>IS_SIGNIN_ENABLED</key>
+	<true/>
+	<key>GOOGLE_APP_ID</key>
+	<string>1:565258637605:ios:f30129e9570e8de5</string>
+	<key>DATABASE_URL</key>
+	<string>https://monte-de-piedad.firebaseio.com</string>
 </dict>
 </plist>
