--- a/plugin.xml
+++ b/plugin.xml
@@ -21,10 +21,10 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 			</feature>
 		</config-file>
 		<config-file parent="/resources" target="res/values/strings.xml">
-			<string name="google_app_id">@string/google_app_id</string>
+			<string name="google_app_id">565258637605</string>
 		</config-file>
 		<config-file parent="/resources" target="res/values/strings.xml">
-			<string name="google_api_key">@string/google_api_key</string>
+			<string name="google_api_key">AAAAg5wKUSU:APA91bFoeY6hPcHYecYCto2kAPpXoiO2x2Dd8aCrNGNVxWngjKC6ESKnbez4DLwsgPp7YztZQ9FYoOyiBr_QzekUsEKBOgWjwWkssLFFKIakpY0NUShheQohrQnyGakjuWCVGFnvZoEju0LP3pW0U0a7VI32h9lHGQ</string>
 		</config-file>
 		<config-file target="AndroidManifest.xml" parent="/*">
 				<uses-permission android:name="android.permission.INTERNET" />
